# safejax

./: .pre-commit-config.yaml  404.html  LICENSE  README.md  bechmark.py  benchmark.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/workflows/: ci-cd.yaml
api/core_load/: index.html
api/core_save/: index.html
api/utils/: index.html
benchmarks/: resnet50.py  single_layer.py
benchmarks/hyperfine/: resnet50.py  single_layer.py
docs/: examples.md  index.md  installation.md  license.md  requirements.md  usage.md  why_safejax.md
docs/api/: core_load.md  core_save.md  load.md  save.md  utils.md
examples/: README.md  flax_ft_safejax.py  haiku_ft_safejax.py  index.html  objax_ft_safejax.py  serialization_with_flax.py  serialization_with_safejax.py
examples/objax/: safe_open_assignment.py
installation/: index.html
license/: index.html
requirements/: build-requirements.sh  index.html  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements.txt
search/: search_index.json
src/safejax/: __init__.py  flax.py  haiku.py  load.py  objax.py  save.py  typing.py  utils.py
src/safejax/convert/: flax.py  torch.py
src/safejax/core/: load.py  save.py
tests/: conftest.py  test_core_load.py  test_core_save.py  test_flax.py  test_haiku.py  test_load.py  test_objax.py  test_save.py  test_utils.py  utils.py
usage/: index.html
why_safejax/: index.html
