[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{name = "Alvaro Bartolome"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "jaxlib~=0.3.25",
  "jax~=0.3.25",
  "flax~=0.6.2",
  "safetensors~=0.2.5",
]
description = "Serialize JAX/Flax models with `safetensors`"
dynamic = ["version"]
keywords = []
license = "MIT"
name = "safejax"
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
Documentation = "https://alvarobartt.github.io/safejax"
Issues = "https://github.com/alvarobartt/safejax/issues"
Source = "https://github.com/alvarobartt/safejax"

[tool.hatch.version]
path = "src/safejax/__init__.py"

[project.optional-dependencies]
quality = [
  "black~=22.10.0",
  "ruff~=0.0.192",
  "pre-commit~=2.20.0",
]
tests = [
  "pytest~=7.1.2",
]

[tool.hatch.envs.quality]
features = [
  "quality"
]

[tool.hatch.envs.quality.scripts]
check = [
  "ruff src tests",
  "black --check --diff --preview src tests",
]
format = [
  "ruff --fix src tests",
  "black --preview src tests",
  "check",
]

[tool.isort]
profile = "black"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.isort]
known-first-party = ["safejax"]

[tool.hatch.envs.test]
features = [
  "tests"
]

[tool.hatch.envs.test.scripts]
run = "pytest tests/ --durations 0 -s"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "/.devcontainer",
  "/.pre-commit-config.yaml",
  "/.gitignore",
  "/tests",
]
